--- a/app/src/main/res/layout/graphe_fragment.xml
+++ b/app/src/main/res/layout/graphe_fragment.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/textView2"
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/graphe"
-        tools:text="graphe" />
-</LinearLayout>
+        android:layout_height="match_parent" />
+
+</RelativeLayout>
