--- a/app/src/main/res/layout-land/homepage_fragment_land.xml
+++ b/app/src/main/res/layout-land/homepage_fragment_land.xml
@@ -56,24 +56,8 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="521dp"
-        tools:layout_editor_absoluteY="241dp">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right|center_vertical|end"
-            android:backgroundTint="@color/colorPrimary"
-            android:clickable="true"
-            android:visibility="visible"
-            app:srcCompat="@android:drawable/ic_menu_edit"
-            tools:clickable="true" />
 
-    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
@@ -82,7 +66,24 @@
         android:layout_marginTop="48dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"></android.support.v7.widget.RecyclerView>
+        tools:layout_editor_absoluteX="0dp" />
+
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|end">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="visible"
+                app:backgroundTint="@color/colorPrimary"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
 </android.support.constraint.ConstraintLayout>
