--- a/app/src/main/res/layout/homepage_fragment.xml
+++ b/app/src/main/res/layout/homepage_fragment.xml
@@ -9,51 +9,52 @@
 
 
     <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:orientation="vertical"
+        >
 
-        <TextView
-            android:id="@+id/filtre"
-            android:layout_width="24dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:text="@string/filtre" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <Spinner
-            android:id="@+id/Spinner_cate"
-            android:layout_width="149dp"
-            android:layout_height="45dp"
-            android:layout_weight="1"
-            android:background="@android:drawable/btn_dropdown"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="1dp">
+            <TextView
+                android:id="@+id/filtre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:text="@string/filtre" />
 
-        </Spinner>
+            <Spinner
+                android:id="@+id/Spinner_cate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:drawable/btn_dropdown">
 
-        <TextView
-            android:id="@+id/tri"
-            android:layout_width="34dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:text="@string/tri_par" />
+            </Spinner>
 
-        <Spinner
-            android:id="@+id/Spinner_tri"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_weight="1"
-            android:background="@android:drawable/btn_dropdown"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="1dp">
+            <TextView
+                android:id="@+id/tri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:text="@string/tri_par" />
 
-        </Spinner>
+            <Spinner
+                android:id="@+id/Spinner_tri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:drawable/btn_dropdown">
+
+            </Spinner>
+        </LinearLayout>
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -67,20 +68,21 @@
 
 
     </android.support.v7.widget.RecyclerView>
-    <LinearLayout
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom|end">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:backgroundTint="@color/colorPrimary"
             android:clickable="true"
+            android:focusable="true"
             android:visibility="visible"
+            app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@android:drawable/ic_menu_edit" />
 
-</LinearLayout>
+</com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </android.support.constraint.ConstraintLayout>
