--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -30,7 +30,7 @@
 
                 <TextView
                     android:id="@+id/title"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/title"
@@ -49,7 +49,6 @@
                     android:id="@+id/circle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1" />
 
@@ -62,15 +61,15 @@
 
                 <TextView
                     android:id="@+id/arthor"
-                    android:layout_width="120dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="5dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     android:text="@string/arthor" />
 
                 <TextView
                     android:id="@+id/description"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/descriptions" />
